--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-exec",
   "description": "Grunt task for executing shell commands.",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0-beta.999",
   "homepage": "https://github.com/jharding/grunt-exec",
   "author": {
     "name": "Jake Harding",
@@ -29,8 +29,7 @@
     "grunt": ">=0.4"
   },
   "devDependencies": {
-    "grunt": "^1.0.0",
-    "grunt-contrib-jshint": "^1.1.0"
+    "grunt": ">=0.4"
   },
   "keywords": [
     "grunt",
